--- a/elixir/Dockerfile
+++ b/elixir/Dockerfile
@@ -1,22 +1,17 @@
-FROM erlang:21 as elixir
+FROM elixir:1.7.4 as jeopardy_dev
+RUN useradd jeopardy
 
-ARG ELIXIR_VERSION
-ARG ELIXIR_DOWNLOAD_SHA256
+RUN apt-get update && apt-get install -y inotify-tools
 
-# elixir expects utf8.
-ENV LANG=C.UTF-8
+ENV HOME=/code
+WORKDIR /code/jeopardy
+RUN chown jeopardy: /code
 
-RUN set -xe \
-  && ELIXIR_DOWNLOAD_URL="https://github.com/elixir-lang/elixir/archive/v${ELIXIR_VERSION#*@}.tar.gz" \
-  && curl -fSL -o elixir-src.tar.gz $ELIXIR_DOWNLOAD_URL \
-  && echo "$ELIXIR_DOWNLOAD_SHA256  elixir-src.tar.gz" | sha256sum -c - \
-  && mkdir -p /usr/local/src/elixir \
-  && tar -xzC /usr/local/src/elixir --strip-components=1 -f elixir-src.tar.gz \
-  && rm elixir-src.tar.gz \
-  && cd /usr/local/src/elixir \
-  && make install clean
+USER jeopardy
 
-FROM elixir as jeopardy-release
+EXPOSE 4000
+
+FROM elixir:1.7.4 as jeopardy_release
 
 RUN mkdir /app
 WORKDIR /app
@@ -38,22 +33,17 @@ COPY config/config.exs rel/config/config.exs
 COPY config/prod.exs rel/config/prod.exs
 
 RUN mix release.init
-RUN find /app
 RUN mix release --no-tar --verbose
 
-FROM erlang:21 as jeopardy-prod
+FROM erlang:21 as jeopardy_prod
 
 RUN mkdir /app  && chown -R nobody: /app
 WORKDIR /app
 USER nobody
 ENV HOME=/app
 
-COPY --from=jeopardy-release /app/_build/prod/rel/jeopardy ./
+COPY --from=jeopardy_release /app/_build/prod/rel/jeopardy ./
 
 ## EXPOSE $HTTP_PORT $BEAM_PORT $ERL_EPMD_PORT
 
-FROM elixir as jeopardy-dev
-ENV HOME=/code
-WORKDIR /code/jeopardy
-
-FROM jeopardy-prod
+FROM jeopardy_prod
