Fixes to various production docker files.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM elixir:1.7.4 as jeopardy_dev
+FROM elixir:1.7.4 as dev
 RUN useradd jeopardy
 
 RUN apt-get update && apt-get install -y inotify-tools
@@ -11,7 +11,7 @@ USER jeopardy
 
 EXPOSE 4000
 
-FROM elixir:1.7.4 as jeopardy_release
+FROM elixir:1.7.4 as release
 
 RUN mkdir /app
 WORKDIR /app
@@ -27,23 +27,21 @@ COPY config ./config
 RUN mix deps.get
 RUN mix deps.compile
 
-# You should place a production config here
-# and it will be copied into the release build
-COPY config/config.exs rel/config/config.exs
-COPY config/prod.exs rel/config/prod.exs
+COPY rel rel/
+COPY lib lib/
+COPY priv priv/
+COPY config/config.exs rel/etc/config.exs
+COPY config/prod.exs rel/etc/prod.exs
 
-RUN mix release.init
-RUN mix release --no-tar --verbose
+RUN mix release --no-tar --verbose --env=prod
 
-FROM erlang:21 as jeopardy_prod
+FROM elixir:1.7.4 as prod
 
-RUN mkdir /app  && chown -R nobody: /app
+# RUN mkdir /app  && chown -R nobody: /app
 WORKDIR /app
-USER nobody
+# USER nobody
 ENV HOME=/app
 
-COPY --from=jeopardy_release /app/_build/prod/rel/jeopardy ./
+COPY --from=release /app/_build/prod/rel/jeopardy ./
 
-## EXPOSE $HTTP_PORT $BEAM_PORT $ERL_EPMD_PORT
-
-FROM jeopardy_prod
+EXPOSE 80
