--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 # The directory Mix will write compiled artifacts to.
-elixir/_build
+backend/_build
 
 # If you run "mix test --cover", coverage assets end up here.
-elixir/cover
+backend/cover
 
 # The directory Mix downloads your dependencies sources to.
-elixir/deps
+backend/deps
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
-elixir/doc
+backend/doc
 
 # Ignore .fetch files in case you like to edit your project deps locally.
-elixir/.fetch
+backend/.fetch
 
 # If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
