not setting PGDATA removes need to modify postgres Dockerfile
So long as volume listed in docker-compose is the same container
directory listed as a volume in original dockerfile.

--- a/jeopardy-prod.yml
+++ b/jeopardy-prod.yml
@@ -6,13 +6,11 @@ services:
       - prod
     environment:
       DB: jeopardy
-      PGDATA: /jeopardy-db-data
       POSTGRES_DB: jeopardy
       DBPASSWORD: ${DBPASSWORD}
 
-
     volumes:
-      - db-data-prod:/jeopardy-db-data
+      - db-data-prod:/var/lib/postgresql/data
 
   backend:
     build:
