--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "jeopardy-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://backend:4000/",
   "dependencies": {
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
